# echo-chess

api/: .gitignore  .rgignore  README.md  database-schema.md  main.py  pyproject.toml
api/auth/: client.py  dependencies.py
api/database/: databaseChess.db  dependencies.py  setup.py
api/database/models/: board_client_db.py  chess_game_db.py  chess_movement_db.py  user_db.py
api/routers/: board_client.py  root.py  setup.py  user.py
api/src/: main.py
api/src/auth/: client.py  dependencies.py
api/src/database/: dependencies.py  setup.py
api/src/database/models/: __init__.py  board_client.py  board_client_db.py  chess_game.py  chess_game_db.py  chess_movement.py  chess_movement_db.py  user.py  user_db.py
api/src/routers/: board_client.py  client.py  root.py  setup.py  user.py
board/: README.md
board/client/: .gitignore  .rgignore  README.md  pyproject.toml
board/client/src/: config.json  config.py  game_controller.py  main.py  move_translation.py  move_translations.py  requirements.txt  serial_communication.py  tts.py  voice_detector.py
board/client/src/chess/: chess_position.py
board/client/src/hardware/: board_position.py  interface.py  mock_transmitter.py  transmitter.py
board/client/tests/hardware/: test_interface.py
client/: .gitignore  README.md  pyproject.toml
client/src/api/: client.py  state.py
client/src/hardware/: command.py  comunication_handler.py  errors.py  interface.py  mock_transmitter.py  response.py  serial_transmitter.py  transmitter.py
client/src/hardware/handlers/: mock_handler.py  serial_handler.py
client/src/model/: board_position.py
client/src/storage/: variable_storage.py
client/src/user/: arguments.py  commands.py  config.py  game_controller.py  input.py  input_prueba.py  main.py  move_translations.py  output.py  output_prueba.py  stt_translations.py  tts.py  user_command.py  user_command_prueba.py  voice_detector.py
client/tests/hardware/: test_board_position.py  test_interface.py  test_transmitter.py
client/tests/model/: test_board_position.py
frontend/: main.py  main.txt
frontend/static/: game_movements.css  update_token.css  user_create.css  user_games.css  user_login.css  user_page.css
frontend/templates/: game_movements.html  home.html  update_token.html  user_create.html  user_games.html  user_login.html  user_page.html
hardware/: .gitignore  README.md  setup-sketch.sh
hardware/controller/: controller.ino
hardware/controller/src/command/: command.cpp  command.hpp  handler.cpp  handler.hpp  interface.cpp  interface.hpp  pqueue.cpp
hardware/controller/src/display/: display.hpp
(+6 files in other folders)
