[tool.poetry]
name = "voice-chess-api"
version = "0.0.0"
description = ""
authors = ["YoAquinjs <sebascertuche@gmail.com>"]
readme = "README.md"
# packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
